--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "firebase": "^9.9.1",
     "next": "12.2.3",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-axios": "^2.0.6",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
