--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-axios": "^2.0.6",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.0",
     "react-redux": "^8.0.2",
     "sass": "^1.54.0"
   },
