--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.0",
+    "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "sass": "^1.54.0"
   },
